<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_home"
                android:layout_width="@dimen/bottom_layout_size"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:onClick="bottomOnClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_home" />

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home"
                    android:textColor="@color/colorUnselected" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_dingdan"
                android:layout_width="@dimen/bottom_layout_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="bottomOnClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_dingdan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_dingdan" />

                <TextView
                    android:id="@+id/text_dingdan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dingdan"
                    android:textColor="@color/colorUnselected" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_mine"
                android:layout_width="@dimen/bottom_layout_size"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:onClick="bottomOnClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_me" />

                <TextView
                    android:id="@+id/text_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mine"
                    android:textColor="@color/colorUnselected" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
